# django-aws

./: Dockerfile  LICENSE  README.md  manage.py  pyproject.toml
aws/: asgi.py  settings.py  urls.py  wsgi.py
