[tool.poetry]
name = "django-aws"
version = "0.1.0"
description = "(Django + AWS) project template"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/karmadonov/django-aws"
repository = "https://github.com/karmadonov/django-aws"
authors = ["Kirill Karmadonov <kirill@live.com>"]
keywords = ["django", "template"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
